--- a/src/main/resources/hibernate.properties
+++ b/src/main/resources/hibernate.properties
@@ -1,4 +1,6 @@
 hibernate.connection.url=jdbc:mysql://localhost:3306/queryForum?createDatabaseIfNotExist=true
+//hibernate.connection.url=jdbc:mysql://127.0.0.1:3307/queryForum?createDatabaseIfNotExist=true
+
 hibernate.connection.username=root
 hibernate.connection.password=jitesh123
 #hibernate.dialect=org.hibernate.dialect.SQLServerDialect
