--- a/src/main/resources/hibernate.properties
+++ b/src/main/resources/hibernate.properties
@@ -1,8 +1,10 @@
-hibernate.connection.url=jdbc:mysql://localhost:3306/queryForum?createDatabaseIfNotExist=true
-//hibernate.connection.url=jdbc:mysql://127.0.0.1:3307/queryForum?createDatabaseIfNotExist=true
+//hibernate.connection.url=jdbc:mysql://localhost:3306/queryForum?createDatabaseIfNotExist=true
+hibernate.connection.url=jdbc:mysql://mysql-docker-container:3306/queryForum?createDatabaseIfNotExist=true
 
 hibernate.connection.username=root
-hibernate.connection.password=jitesh123
+//hibernate.connection.password=jitesh123
+hibernate.connection.password=root
+
 #hibernate.dialect=org.hibernate.dialect.SQLServerDialect
 hibernate.connection.driver_class=com.mysql.cj.jdbc.Driver
 hibernate.dialect=org.hibernate.dialect.MySQLDialect
